--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "nodejslearning",
+  "name": "nodejslearning2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "express": "*",
-    "body-parser": "*",
-    "mongoose": "*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.11.0"
+    "@types/body-parser": "*",
+    "@types/chai": "^3.4.35",
+    "@types/chai-http": "0.0.30",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/debug": "*",
+    "@types/errorhandler": "0.0.30",
+    "@types/express": "*",
+    "@types/mocha": "^2.2.40",
+    "@types/mongoose": "*",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.8",
+    "ts-node": "^3.0.0",
+    "typescript": "^2.2.1"
+  },
+  "dependencies": {
+    "body-parser": "*",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.5.0",
+    "express": "*",
+    "mongoose": "*",
+    "morgan": "^1.8.1"
   }
 }
