--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/debug": "*",
     "@types/errorhandler": "0.0.30",
     "@types/express": "*",
+    "@types/method-override": "0.0.29",
     "@types/mocha": "^2.2.40",
     "@types/mongoose": "*",
     "@types/morgan": "^1.7.32",
