--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/mongoose": "*",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.8",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "mocha-typescript": "^1.0.23",
     "ts-node": "^3.0.0",
     "typescript": "^2.2.1"
   },
@@ -33,7 +36,10 @@
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
     "express": "*",
+    "inversify": "^3.3.0",
     "mongoose": "*",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "q": "^1.5.0",
+    "reflect-metadata": "^0.1.10"
   }
 }
