--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": true
+        "sourceMap": true,
+        "experimentalDecorators": true
     },
     "exclude": ["node_modules"
     ]
